Updated broken ScreenShot link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                    Or you can follow these steps to [run on Eclipse](http://stackoverflow.com/questions/21535023/how-to-get-your-netbeans-project-into-eclipse) </li>
               <li> Make sure your mbrola and FreeTTS(steps are below) libraries are installed with the project or it'll give Run Time Error. </li>
               <li> Then Build and Run the Project, it should open up a window like this: 
-                <img href="https://i.imgur.com/WfZgag2.png" alt="BiDictionary ScreenShot" /> </li>
+                <img href="https://github.com/C-F-4/Dictionary/blob/gh-pages/images/ScreenShot-bidictionary.png" alt="BiDictionary ScreenShot" /> </li>
               <li> Try Searching for a word like "Zythum" and click on the "Speaker" icon to start the Speech Synthesis. </li>
             </ul>
           </p>
